_sass/pg-custom.scss
@import "variables";
@import "mixins";

.post-tags {
    margin-top: 1.3rem;
}

.tag-btn {
  display: inline-block;
  color: rgba(255, 255, 255, 0.7);
  background-color: rgba(255, 255, 255, 0.08);
  border-color: rgba(255, 255, 255, 0.2);
  border-style: solid;
  border-width: 1px;
  border-radius: 0.3rem;
  transition: color 0.2s, background-color 0.2s, border-color 0.2s;
  padding: 0.5rem 0.75rem;

  &:hover {
    color: rgba(255, 255, 255, 0.8);
    text-decoration: none;
    background-color: rgba(255, 255, 255, 0.2);
    border-color: rgba(255, 255, 255, 0.3);
  }

  + .tag-btn {
    margin-left: 1rem;
  }

  @include large {
  }

  @include medium {
    font-size: 0.9rem;
  }

  @include small {
    font-size: 0.9rem;

    + .tag-btn {
      margin-top: 1rem;
      margin-left: 0;
    }
  }
}

.main-content {
  ul,
  ol {
    padding: 0rem 0rem 0.2rem 1.25rem;
  }

  li {
    margin-left: 0.25rem;
    margin-bottom: 0.2rem;
  }
}

.site-footer {
  .footer-part {
    padding: 0.69rem;
  }
}

.post-toc {
  background-color: var(--toc-bg-color);
  margin: 0.1rem 0rem;
  padding: 0.5rem 1.1rem;
  border: 0.1rem solid var(--toc-border-color);
  border-radius: 0.25rem;

  .toc-title {
    font-size: 1.7rem;
    font-weight: bold;
  }

  .post-toc-list {
    margin-top: 0.5rem;
  }

  ul,
  ol {
    margin-bottom: 0;
    padding-bottom: 0;
  }
}

